deployment/base/docmost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docmost
  labels:
    app.kubernetes.io/part-of: docmost
