deployment/base/docmost/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docmost
  namespace: docmost
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kjg.hauptspeicher.com`) && PathRegexp(`^/(icons/favicon-\d+x\d+\.png|favicon\.ico|apple-touch-icon\.png)$`)
      kind: Rule
      priority: 20
      services:
        - name: docmost-favicon
          port: 80
    - match: Host(`kjg.hauptspeicher.com`)
      kind: Rule
      priority: 10
      services:
        - name: docmost
          port: 3000
  tls:
    certResolver: myresolver
